--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -34,7 +34,7 @@ APP3
     <div class="container">
 
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
+        <h1>Python it's not a snake!</h1>
         <p class="lead">Hello, its my proj #4 :> <br> login to know info about NFT</p>
       </div>
 
